# nangman-crypto-market-ingest

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  buildspec.yml  compose.yml  sonar-project.properties
.github/workflows/: sonar.yml
config/: cost.paper.toml  exchanges.toml  universe.major-50.toml
crates/crypto-domain/: Cargo.toml
crates/crypto-domain/src/: ai.rs  decisions.rs  enums.rs  error.rs  lib.rs  market.rs  numeric.rs  position_payload.rs  signals.rs  symbol.rs  tests.rs  time_window.rs
crates/crypto-market-data/: Cargo.toml
crates/crypto-market-data/src/: clock.rs  depth_sync.rs  error.rs  ingest_watch.rs  lib.rs  messages.rs  normalize.rs  reader.rs  stats.rs  stream_config.rs  tests.rs  tls.rs
crates/crypto-market-data/src/depth_sync/: book.rs  sync.rs  types.rs
crates/crypto-market-data/src/depth_sync/sync/: alerts.rs  event.rs  snapshot.rs
crates/crypto-market-data/src/ingest_watch/: message.rs  observe.rs  watch.rs
crates/crypto-market-data/src/ingest_watch/observe/: normalization.rs  parsed.rs  sequence.rs
crates/crypto-market-data/src/ingest_watch/watch/: basic.rs  depth.rs
crates/crypto-market-data/src/normalize/: depth.rs  math.rs  payload.rs  ticker.rs
crates/crypto-market-data/src/reader/: kind.rs  payload.rs  single.rs  stream.rs
docs/contracts/: market-ingest-app-contract.md
ecs/: service.example.json  task-definition.example.json  task-role-policy.example.json
scripts/: check-ecr-scan.sh  check-release-readiness.sh  check-repository-contract.py  check-runtime.sh  check-universe-readiness.sh  deploy.sh  diagnose-l1-staleness.sh  prepare-release-artifacts.sh  preview-universe-bootstrap-admission.sh  render-ecs-task-definition.sh  send-market-runtime-alert.sh
src/: args.rs  clock.rs  config.rs  lib.rs  live.rs  log_stream.rs  main.rs  maintenance.rs  reconnect.rs  runtime.rs  shutdown.rs  supervisor.rs  venue_runner.rs
src/args/: env.rs  help.rs  parse.rs  parse_cli.rs  tests.rs  validation.rs
src/backfill/: args.rs  binance.rs  error.rs  health.rs  mod.rs  report.rs  run.rs  upbit.rs
src/binance/: config.rs  derivatives.rs  error.rs  events.rs  logging.rs  mod.rs  report.rs  rest.rs  stats.rs  storage_output.rs  ws.rs
src/config/: loader.rs  lookup.rs  tests.rs  types.rs  validation.rs
src/live/: publisher.rs  quote.rs  tests.rs  tick.rs
src/normalize/: admissibility.rs  args.rs  build.rs  derivative_projection.rs  discovery.rs  input_keys.rs  l1_reader.rs  mod.rs  mode.rs  model.rs  payload.rs  projection.rs  publish.rs  quality.rs  read.rs  run.rs  write.rs  write_schema.rs
src/storage/: disk.rs  eviction.rs  gap.rs  health.rs  mod.rs  orphan.rs  parquet_file.rs  partition.rs  record.rs  retention.rs  retention_loop.rs  s3_upload.rs  sink.rs  smoke_validation.rs  symbol_health.rs
src/supervisor/: args.rs  bootstrap.rs  mod.rs  process.rs  retention.rs  scheduler.rs  tests.rs  worker_args.rs
src/upbit/: config.rs  error.rs  events.rs  logging.rs  mod.rs  report.rs  stats.rs  storage_output.rs  universe.rs  url.rs  ws.rs
tests/: binance_depth_fixture.rs
(+255 files in other folders)
