[package]
name = "market-ingest-app"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"

[dependencies]
arrow-array = "58.2.0"
arrow-schema = "58.2.0"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.131.0"
aws-types = "1.3.10"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
crypto-domain = { path = "crates/crypto-domain" }
crypto-market-data = { path = "crates/crypto-market-data" }
futures-util = "0.3.32"
libc = "0.2"
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "zstd"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
