[package]
name = "crypto-market-data"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"

[dependencies]
crypto-domain = { path = "../crypto-domain" }
futures-util = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
